Add header, basic styles

--- a/map/src/index.html
+++ b/map/src/index.html
@@ -5,6 +5,18 @@
     <link rel="icon" type="image/x-icon" href="https://openlayers.org/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Paths to Wellbeing Map</title>
+    <style>
+      html, body {
+        margin: 0;
+        height: 100%;
+      }
+      #map {
+        position: absolute;
+        top: 0;
+        bottom: 0;
+        width: 100%;
+      }
+    </style>
   </head>
   <body>
     <div id="map"></div>
